# programming-with-cpp20

./: .gitattributes  CMakeLists.txt  LICENSE.txt  Readme.md
01.01-variadicTemplateSum0/: main.cpp
01.01-variadicTemplateSum2/: main.cpp
01.02-variableTemplate0/: CMakeLists.txt
01.02-variadicTemplateSum1/: main.cpp
01.03-variadicTemplateSum2/: main.cpp
01.05-theSimplestConcept0/: main.cpp
01.05-variadicTemplateSum3/: main.cpp
01.06-simpleRequirement0/: main.cpp
01.07-nestedRequirement0/: main.cpp
01.07-variableTemplate0/: main.cpp
01.08-compoundRequirement0/: main.cpp
01.09-byteLikeTypeConcept0/: main.cpp
01.09-typeRequirement0/: main.cpp
01.10-compoundRequirement1/: main.cpp
01.11-compoundRequirement2/: main.cpp
01.11-variadicTemplateSum3/: main.cpp
01.12-simpleRequirement0/: main.cpp
01.12-testingRequirements0/: main.cpp
01.13-nestedRequirement0/: main.cpp
01.14-compoundRequirement0/: main.cpp
01.14-invocable0/: main.cpp
01.15-invocable1/: main.cpp
01.16-constexprFunctionInConcept0/: main.cpp
01.16-typeRequirement0/: main.cpp
01.18-typeRequirement1/: main.cpp
01.18-vectorsSize0/: main.cpp
01.19-constrainedAdd0/: main.cpp
01.21-constrainedAdd1/: main.cpp
01.21-vectorsSize1/: main.cpp
01.22-validateInDebugModeIfExists0/: main.cpp
01.23-constrainedAdd2/: main.cpp
01.24-optional0/: main.cpp
01.24-testingRequirements0/: main.cpp
01.26-optional1/: main.cpp
01.27-conceptBaseDispatch0/: main.cpp
01.27-optional2/: main.cpp
01.28-optional3/: main.cpp
01.29-optional4/: main.cpp
01.32-optional5/: main.cpp
01.33-optional6/: main.cpp
01.34-isSameConcept0/: main.cpp
01.35-invocable1/: main.cpp
01.36-isSameConcept1/: main.cpp
01.36-vectorsSize0/: CMakeLists.txt  main.cpp
01.37-isSameConcept2/: main.cpp
01.38-isSameConcept3/: main.cpp
01.39-vectorsSize1/: main.cpp
01.40-constrainedAdd3/: main.cpp
01.40-printSorted0/: main.cpp
01.41-validateInDebugModeIfExists0/: main.cpp
01.42-printSorted1/: main.cpp
01.43-optional0/: main.cpp
01.45-optional1/: main.cpp
01.46-optional2/: main.cpp
01.47-optional3/: main.cpp
01.48-optional4/: main.cpp
01.51-optional5/: main.cpp
01.52-optional6/: main.cpp
01.53-isSameConcept0/: main.cpp
01.55-isSameConcept1/: main.cpp
01.56-isSameConcept2/: main.cpp
01.57-isSameConcept3/: main.cpp
01.61-printSorted1/: main.cpp
02.01-limitlessSequenceWithoutCoroutines0/: main.cpp
02.03-limitlessSequenceWithFunctionTemplate0/: main.cpp
02.04-coroutineLimitlessSequence0/: main.cpp
02.08-parsingDataStream0/: main.cpp
02.10-coroutineParsingDataStream0/: main.cpp
02.18-coroutineParsingDataStream1/: main.cpp
02.24-coroutineParsingDataStreamCustomAllocator0/: main.cpp
02.25-coroutineParsingDataStreamCustomAllocator1/: main.cpp
02.27-coroutineParsingDataStreamException0/: main.cpp
03.01-rangesMotivation0/: main.cpp
03.02-rangesMotivation1/: main.cpp
03.03-rangesMotivation2/: main.cpp
03.04-twoStepUsing0/: main.cpp
03.05-twoStepUsing1/: CMakeLists.txt  main.cpp
03.06-twoStepUsing2/: CMakeLists.txt  main.cpp
03.07-rangesSafety0/: CMakeLists.txt  main.cpp
03.08-rangesSafety1/: main.cpp
03.09-rangesMotivationComposability0/: main.cpp
03.10-rangesMotivationComposability1/: main.cpp
03.11-aRange0/: main.cpp
03.13-rangesCommonView1/: main.cpp
03.14-rangesCommonView2/: main.cpp
03.15-rangesProjection0/: CMakeLists.txt  main.cpp
03.17-rangesProjection1/: main.cpp
03.22-rangesNamespaces0/: main.cpp
07.18-genericLambdaVarArgsForward2/: CMakeLists.txt  main.cpp
(+183 files in other folders)
